Added boot jvm options for java 7 to address permgen errors.